--- a/app/src/main/res/layout/cardview_announcement.xml
+++ b/app/src/main/res/layout/cardview_announcement.xml
@@ -6,10 +6,18 @@
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground">
 
-    <com.makeramen.roundedimageview.RoundedImageView
+    <com.jsibbold.zoomage.ZoomageView
         android:id="@+id/imgBanner"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:zoomage_restrictBounds="false"
+        app:zoomage_animateOnReset="true"
+        app:zoomage_autoResetMode="ALWAYS"
+        app:zoomage_autoCenter="true"
+        app:zoomage_zoomable="true"
+        app:zoomage_translatable="true"
+        app:zoomage_minScale="0.6"
+        app:zoomage_maxScale="8"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,11 +28,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
         android:fontFamily="@font/gabarito_medium"
         android:textAlignment="center"
         android:textColor="?colorPrimary"
-        android:textSize="17sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgBanner"
@@ -35,7 +43,7 @@
         android:id="@+id/tvTimestamp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
         android:fontFamily="@font/gabarito_regular"
         android:textSize="14sp"
         android:textAlignment="center"
@@ -48,11 +56,12 @@
         android:id="@+id/tvContent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
         android:layout_marginTop="16dp"
         android:visibility="gone"
+        tools:visibility="visible"
         android:fontFamily="@font/gabarito_regular"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTimestamp"
