--- a/app/src/main/res/layout/cardview_request.xml
+++ b/app/src/main/res/layout/cardview_request.xml
@@ -11,18 +11,34 @@
         android:id="@+id/tvDocumentName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/gabarito_medium"
         android:layout_marginTop="16dp"
-        android:textColor="?colorPrimary"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/gabarito_medium"
+        android:textColor="?colorPrimary"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvTimestamp"
+        app:layout_constraintBottom_toTopOf="@+id/tvName"
         app:layout_constraintEnd_toEndOf="@+id/btnCancel"
         app:layout_constraintEnd_toStartOf="@+id/btnCancel"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/tvTimestamp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="spread_inside"
+        tools:text="LASTNAME_DOCTYPE" />
+
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/gabarito_regular"
+        android:textColor="?colorPrimary"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/tvTimestamp"
+        app:layout_constraintEnd_toEndOf="@+id/btnCancel"
+        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/tvDocumentName"
+        app:layout_constraintTop_toBottomOf="@+id/tvDocumentName"
         tools:text="LASTNAME_DOCTYPE" />
 
     <TextView
@@ -34,8 +50,9 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/tvStatus"
         app:layout_constraintEnd_toStartOf="@+id/btnCancel"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDocumentName"
+        app:layout_constraintTop_toBottomOf="@+id/tvName"
         tools:text="23 Feb 2022, 07:23 AM" />
 
     <TextView
@@ -43,11 +60,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/gabarito_bold"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/materialDivider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTimestamp"
         tools:text="Status" />
@@ -57,9 +73,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:insetTop="0dp"
         android:backgroundTint="?colorSecondary"
         android:fontFamily="@font/gabarito_regular"
+        android:insetTop="0dp"
         android:text="Cancel"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +86,6 @@
         android:id="@+id/materialDivider"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btnCancel"
