--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -37,8 +37,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/barangay360"
-                tools:visibility="gone">
+                app:layout_constraintTop_toBottomOf="@+id/barangay360">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/tilLoginEmail"
@@ -67,8 +66,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    app:endIconMode="password_toggle"
                     app:boxBackgroundColor="@color/white"
+                    app:endIconMode="password_toggle"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tilLoginEmail">
@@ -85,14 +84,28 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnForgotPassword"
+                    style="@style/Widget.Material3.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/gabarito_regular"
+                    android:insetLeft="0dp"
+                    android:paddingHorizontal="0dp"
+                    android:text="Forgot Password"
+                    android:textColor="?colorSecondary"
+                    app:iconGravity="end"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tilLoginPassword"
+                    app:rippleColor="@android:color/transparent" />
+
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnGotoSignup"
                     style="@style/Widget.Material3.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="16dp"
                     android:fontFamily="@font/gabarito_regular"
                     android:insetLeft="0dp"
-                    app:rippleColor="@android:color/transparent"
                     android:paddingHorizontal="0dp"
                     android:text="Sign up"
                     android:textColor="?colorSecondary"
@@ -101,7 +114,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/textView"
-                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+                    app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+                    app:rippleColor="@android:color/transparent" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -120,12 +134,12 @@
                     android:id="@+id/btnLogin"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="16dp"
                     android:fontFamily="@font/gabarito_regular"
                     android:text="Log in"
                     app:layout_constraintEnd_toEndOf="@+id/tilLoginPassword"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tilLoginPassword" />
+                    app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline2"
@@ -147,8 +161,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/clLogin"
-                tools:visibility="visible">
+                app:layout_constraintTop_toBottomOf="@+id/clLogin">
 
                 <TextView
                     android:id="@+id/textView17"
