--- a/app/src/main/res/layout/fragment_blotter.xml
+++ b/app/src/main/res/layout/fragment_blotter.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tlIncidentReports"
+            android:id="@+id/tlBlotter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +25,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Pending" />
+
+            <!--<com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hearing Scheduled" />-->
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
@@ -44,26 +49,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/gabarito_regular"
-            android:text="You have no pending document requests"
+            android:text="You have no pending reports"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tlIncidentReports" />
+            app:layout_constraintTop_toBottomOf="@+id/tlBlotter" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvIncidentReports"
+            android:id="@+id/rvBlotter"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tlIncidentReports" />
+            app:layout_constraintTop_toBottomOf="@+id/tlBlotter" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/btnReportCrime"
+            android:id="@+id/btnReportIncident"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
             android:backgroundTint="?colorPrimary"
             android:paddingStart="20dp"
-            android:text="Report a Crime"
+            android:text="Report an Incident"
             android:textColor="?colorOnPrimary"
             app:icon="@drawable/flag_solid"
             app:iconTint="?colorOnPrimary"
