--- a/app/src/main/res/layout/fragment_document_request.xml
+++ b/app/src/main/res/layout/fragment_document_request.xml
@@ -40,6 +40,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tlRequestStatus" />
 
+        <TextView
+            android:id="@+id/tvEmpty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/gabarito_regular"
+            android:text="You have no pending document requests"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tlRequestStatus" />
+
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/btnRequestNewDocument"
             android:layout_width="wrap_content"
