--- a/app/src/main/res/layout/fragment_form_residency.xml
+++ b/app/src/main/res/layout/fragment_form_residency.xml
@@ -61,7 +61,7 @@
                     android:layout_height="match_parent"
                     android:drawablePadding="14dp"
                     android:fontFamily="@font/gabarito_regular"
-                    android:hint="First Name"
+                    android:hint="First Name*"
                     android:inputType="textCapCharacters" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -105,7 +105,7 @@
                     android:layout_height="match_parent"
                     android:drawablePadding="14dp"
                     android:fontFamily="@font/gabarito_regular"
-                    android:hint="Last Name"
+                    android:hint="Last Name*"
                     android:inputType="textCapCharacters" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -127,7 +127,7 @@
                     android:layout_height="match_parent"
                     android:drawablePadding="14dp"
                     android:fontFamily="@font/gabarito_regular"
-                    android:hint="Civil Status"
+                    android:hint="Civil Status*"
                     android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -150,7 +150,7 @@
                     android:drawablePadding="14dp"
                     android:fontFamily="@font/gabarito_regular"
                     android:focusable="false"
-                    android:hint="Birthday"
+                    android:hint="Birthday*"
                     android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -183,7 +183,7 @@
                     android:layout_height="match_parent"
                     android:drawablePadding="14dp"
                     android:fontFamily="@font/gabarito_regular"
-                    android:hint="Purok"
+                    android:hint="Purok*"
                     android:inputType="textCapCharacters" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -252,7 +252,7 @@
                     android:layout_height="match_parent"
                     android:drawablePadding="14dp"
                     android:fontFamily="@font/gabarito_regular"
-                    android:hint="Residency Status"
+                    android:hint="Residency Status*"
                     android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -322,7 +322,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/gabarito_regular"
-                android:text="Submit Request Form"
+                android:text="Submit Form"
                 app:layout_constraintEnd_toEndOf="@+id/tilResidency"
                 app:layout_constraintStart_toStartOf="@+id/tilResidency"
                 app:layout_constraintTop_toBottomOf="@+id/tilResidency" />
